--- a/public/GMII/Lebihlanjut.html
+++ b/public/GMII/Lebihlanjut.html
@@ -11,22 +11,22 @@
     <header>
         <nav>
             <div class="top-left">
-                <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+                <img class="logo" src="assets/images/gmiilogo.png"/>
                 <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
             </div>
             <div class="top-right">
                 <ul>
-                    <li><a href="/GMII/Home.html">Beranda</a></li>
-                    <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
-                    <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
-                    <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                    <li><a href="Home.html">Beranda</a></li>
+                    <li><a href="TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="Warta.html">Warta Jemaat</a></li>
+                    <li><a href="Kegiatan.html">Kegiatan</a></li>
                     <a href="/login"><button class="popup-login">Login</button></a>
                 </ul>
             </div>
         </nav>
     </header>
   <div class="bannerutama">
-    <img src="/GMII/assets/images/bannerkegiatan.jpg">
+    <img src="assets/images/bannerkegiatan.jpg">
     <h1>Lebih lanjut tentang Kegiatan dan Program <br>Jemaat Akcaya Pontianak</h1>
   </div>
   <div class="jadwalkegiatan">
