--- a/public/GMII/TentangKami.html
+++ b/public/GMII/TentangKami.html
@@ -8,22 +8,22 @@
 </head>
 <nav>
     <div class="top-left">
-        <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+        <img class="logo" src="assets/images/gmiilogo.png"/>
         <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
     </div>
     <div class="top-right">
         <ul>
-            <li><a href="/GMII/Home.html">Beranda</a></li>
-            <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
-            <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
-            <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+            <li><a href="Home.html">Beranda</a></li>
+            <li><a href="TentangKami.html">Tentang Kami</a></li>
+            <li><a href="Warta.html">Warta Jemaat</a></li>
+            <li><a href="Kegiatan.html">Kegiatan</a></li>
             <a href="/login"><button class="popup-login">Login</button></a>
         </ul>
     </div>
 </nav>
 <body>
     <div class="top-page">
-        <img src="/GMII/assets/images/salib.jpg">
+        <img src="assets/images/salib.jpg">
         <h1>Tentang kami</h1>
         <h2>Tentang Gereja Misi Injili Indonesia Jemaat Akcaya Indonesia</h2>
     </div>
@@ -46,22 +46,22 @@
         <h3>Badan Pengurus GMII "Akcaya" Pontianak</h3>
         <div class="pengurus">
             <div class="nama-gelar">
-                <img src="/GMII/assets/images/foto1.svg">
+                <img src="assets/images/foto1.svg">
                 <h4>Pdt. Heni Sarah Pandu, S.Th</h4>
                 <i>Ketua majelis/Gembala</i>
             </div>
             <div class="nama-gelar">
-                <img src="/GMII/assets/images/foto2.svg">
+                <img src="assets/images/foto2.svg">
                 <h4>Bpk. Adriel Leonardo Kotte, <br>Amd.Pi</h4>
                 <i>Sekretaris</i>
             </div>
             <div class="nama-gelar">
-                <img src="/GMII/assets/images/foto3.svg">
+                <img src="assets/images/foto3.svg">
                 <h4>Ev. Meli Ester, S.Pd.K</h4>
                 <i>Bendahara</i>
             </div>
             <div class="nama-gelar">
-                <img src="/GMII/assets/images/foto4.svg">
+                <img src="assets/images/foto4.svg">
                 <h4>Bpk. Are Tri Kurniawan, S.T</h4>
                 <i>Pemerhati dan Pemuda</i>
             </div>
