--- a/public/GMII/Ibadah.html
+++ b/public/GMII/Ibadah.html
@@ -9,22 +9,22 @@
 <body>
     <nav>
         <div class="top-left">
-            <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+            <img class="logo" src="assets/images/gmiilogo.png"/>
             <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
         </div>
         <div class="top-right">
             <ul>
-                <li><a href="/GMII/Home.html">Beranda</a></li>
-                <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
-                <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
-                <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                <li><a href="Home.html">Beranda</a></li>
+                <li><a href="TentangKami.html">Tentang Kami</a></li>
+                <li><a href="Warta.html">Warta Jemaat</a></li>
+                <li><a href="Kegiatan.html">Kegiatan</a></li>
                 <a href="/login"><button class="popup-login">Login</button></a>
             </ul>
         </div>
     </nav>
     <section>
         <div class="banner">
-            <img src="/GMII/assets/images/fotogereja2.jpg">
+            <img src="assets/images/fotogereja2.jpg">
             <h1>Ibadah Minggu</h1>
         </div>
     </section>
