--- a/public/GMII/Retret.html
+++ b/public/GMII/Retret.html
@@ -9,27 +9,27 @@
 <body>
     <nav>
         <div class="top-left">
-            <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+            <img class="logo" src="assets/images/gmiilogo.png"/>
             <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
         </div>
         <div class="top-right">
             <ul>
-                <li><a href="/GMII/Home.html">Beranda</a></li>
-                <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
-                <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
-                <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                <li><a href="Home.html">Beranda</a></li>
+                <li><a href="TentangKami.html">Tentang Kami</a></li>
+                <li><a href="Warta.html">Warta Jemaat</a></li>
+                <li><a href="Kegiatan.html">Kegiatan</a></li>
                 <a href="/login"><button class="popup-login">Login</button></a>
             </ul>
         </div>
     </nav>
     <section>
         <div class="banner">
-            <img src="/GMII/assets/images/fotogereja2.jpg">
+            <img src="assets/images/fotogereja2.jpg">
             <h1>Retret</h1>
         </div>
     </section>
     <div class="deskripsi-kegiatan" id="mundur">
-        <img class="cross" src="/GMII/assets/images/cross.png">
+        <img class="cross" src="assets/images/cross.png">
         <h1>Belum ada informasi lebih lanjut terkait retret</h1>
     </div>
     <footer>
