--- a/public/GMII/index.html
+++ b/public/GMII/index.html
@@ -10,28 +10,28 @@
     <header>
         <nav>
             <div class="top-left">
-                <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+                <img class="logo" src="assets/images/gmiilogo.png"/>
                 <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
             </div>
             <div class="top-right">
                 <ul>
-                    <li><a href="/GMII/Home.html">Beranda</a></li>
-                    <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
-                    <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
-                    <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                    <li><a href="Home.html">Beranda</a></li>
+                    <li><a href="TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="Warta.html">Warta Jemaat</a></li>
+                    <li><a href="Kegiatan.html">Kegiatan</a></li>
                     <a href="/login"><button class="popup-login">Login</button></a>
                 </ul>
             </div>
         </nav>
     </header>
     <div class="bannerberanda">
-        <img src="/GMII/assets/images/bannerberanda.jpg">
+        <img src="assets/images/bannerberanda.jpg">
         <p class="teks1">Welcome to</p>
         <h1>Gereja Misi Injili Indonesia</h1>
         <p class="teks2">Jemaat Akcaya Pontianak</p>
     </div>
     <div class="deskripsi">
-        <img src="/GMII/assets/images/fotogereja.jpg">
+        <img src="assets/images/fotogereja.jpg">
         <div class="teks">
             <h2>DESKRIPSI GEREJA</h2>
             <p>Gereja Misi Injili Indonesia (GMII) Jemaat Akcaya Pontianak adalah sebuah gereja Kristen di Pontianak, Kalimantan Barat, yang didirikan dengan tujuan untuk menyebarkan Injil dan memperluas kerajaan Allah di wilayah tersebut. Gereja ini melayani jemaatnya dengan ajaran dan nilai-nilai Kristen, serta menyediakan berbagai kegiatan rohani dan sosial untuk memperkuat iman dan persekutuan antar anggota jemaat. GMII Pontianak juga aktif dalam melayani masyarakat sekitar melalui program-program kemanusiaan dan kesejahteraan sosial. Dengan semangat pelayanan dan misi, gereja ini berkomitmen untuk menjadi terang dan garam di tengah-tengah komunitas Pontianak.</p>
@@ -42,7 +42,7 @@
         <div class="kiri">
             <p class="alamat-kontak">Alamat:</p>
             <p>Jl. Moh. Syafe'i No.35, Kota Pontianak</p>
-            <p>Lokasi<a class="link" href="https:/images/www.google.com/maps/place/Gereja+GMII/@-0.0382907,109.3420163,17.09z/
+            <p>Lokasi<a class="link" href="https:/images/www.google.com/maps/place/Gereja@-0.0382907,109.3420163,17.09z/
             data=!4m6!3m5!1s0x2e1d59ad9127d59d:0x6a31d724354f8fe5!8m2!3d-0.038112!4d109.341562!16s%2Fg%2F1hf2pgmd4?entry=ttu" target="_blank"> Google Map</a></p>
             <br>
             <p class="alamat-kontak">Whatsapp:</p>
