--- a/public/GMII/Kegiatan.html
+++ b/public/GMII/Kegiatan.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/@fullcalendar/interaction@4.4.0/main.min.js"></script>
     <script src="https://unpkg.com/@fullcalendar/daygrid@4.4.1/main.min.js"></script>
     <script src="https://unpkg.com/@fullcalendar/timegrid@4.4.1/main.min.js"></script>
-    <script src="assets/JS/style.js"></script>
+    <script src="assets/javascripts/style.js"></script>
 </head>
 <body>
     <nav>
