--- a/public/GMII/Kegiatan.html
+++ b/public/GMII/Kegiatan.html
@@ -15,21 +15,23 @@
     <script src="assets/javascripts/style.js"></script>
 </head>
 <body>
-    <nav>
-        <div class="top-left">
-            <img class="logo" src="assets/images/gmiilogo.png"/>
-            <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
-        </div>
-        <div class="top-right">
-            <ul>
-                <li><a href="Home.html">Beranda</a></li>
-                <li><a href="TentangKami.html">Tentang Kami</a></li>
-                <li><a href="Warta.html">Warta Jemaat</a></li>
-                <li><a href="Kegiatan.html">Kegiatan</a></li>
-                <a href="/login"><button class="popup-login">Login</button></a>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="top-left">
+                <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+                <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
+            </div>
+            <div class="top-right">
+                <ul>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
+                    <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                    <a href="/login"><button class="popup-login">Login</button></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="bannerutama">
         <img src="assets/images/bannerkegiatan.jpg">
         <h1>Kegiatan dan Program <br>Jemaat Akcaya Pontianak</h1>
@@ -44,10 +46,10 @@
     <div class="program">
         <h3>Program GMII Akcaya Pontianak</h3>
         <div class="kontener2">
-            <a class="program-item" href="Retret.html"><img src="assets/images/retret.jpg"> <h2>Retreat</h2></a>
-            <a class="program-item" href="Komsel.html"><img src="assets/images/komsel.jpg"> <h2>Komsel</h2></a>
-            <a class="program-item" href="Ibadah.html"><img src="assets/images/ibadahminggu.png"> <h2>Ibadah Minggu</h2></a>
-            <a class="program-item" href="Kerjasama.html"><img src="assets/images/alatmusik.jpg"> <h2>Kerja Sama dengan BPPR</h2></a>
+            <a class="program-item" href="/Retret.html"><img src="assets/images/retret.jpg"> <h2>Retreat</h2></a>
+            <a class="program-item" href="/Komsel.html"><img src="assets/images/komsel.jpg"> <h2>Komsel</h2></a>
+            <a class="program-item" href="/Ibadah.html"><img src="assets/images/ibadahminggu.png"> <h2>Ibadah Minggu</h2></a>
+            <a class="program-item" href="/Kerjasama.html"><img src="assets/images/alatmusik.jpg"> <h2>Kerja Sama dengan BPPR</h2></a>
         </div>
     </div>
     <footer>
