--- a/public/GMII/TentangKami.html
+++ b/public/GMII/TentangKami.html
@@ -6,22 +6,24 @@
     <title>Tentang Kami | GMII "Akcaya" Pontianak</title>
     <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
-<nav>
-    <div class="top-left">
-        <img class="logo" src="assets/images/gmiilogo.png"/>
-        <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
-    </div>
-    <div class="top-right">
-        <ul>
-            <li><a href="Home.html">Beranda</a></li>
-            <li><a href="TentangKami.html">Tentang Kami</a></li>
-            <li><a href="Warta.html">Warta Jemaat</a></li>
-            <li><a href="Kegiatan.html">Kegiatan</a></li>
-            <a href="/login"><button class="popup-login">Login</button></a>
-        </ul>
-    </div>
-</nav>
 <body>
+    <header>
+        <nav>
+            <div class="top-left">
+                <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+                <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
+            </div>
+            <div class="top-right">
+                <ul>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
+                    <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                    <a href="/login"><button class="popup-login">Login</button></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="top-page">
         <img src="assets/images/salib.jpg">
         <h1>Tentang kami</h1>
