--- a/public/GMII/Warta.html
+++ b/public/GMII/Warta.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" type="text/css" href="styles/style1.css">
 </head>
 <body>
-    <nav>
-        <div class="top-left">
-            <img class="logo" src="assets/images/gmiilogo.png"/>
-            <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
-        </div>
-        <div class="top-right">
-            <ul>
-                <li><a href="Home.html">Beranda</a></li>
-                <li><a href="TentangKami.html">Tentang Kami</a></li>
-                <li><a href="Warta.html">Warta Jemaat</a></li>
-                <li><a href="Kegiatan.html">Kegiatan</a></li>
-                <a href="/login"><button class="popup-login">Login</button></a>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="top-left">
+                <img class="logo" src="/GMII/assets/images/gmiilogo.png"/>
+                <h3>Gereja Misi Injili Indonesia <br>Jemaat Akcaya Pontianak</h3>
+            </div>
+            <div class="top-right">
+                <ul>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
+                    <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
+                    <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
+                    <a href="/login"><button class="popup-login">Login</button></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <section>
         <div class="bannerutama">
             <img src="assets/images/bannerw.jpg">
