--- a/public/GMII/Lebihlanjut.html
+++ b/public/GMII/Lebihlanjut.html
@@ -16,7 +16,7 @@
         </div>
         <div class="top-right">
             <ul>
-                <li><a href="./">Beranda</a></li>
+                <li><a href="/">Beranda</a></li>
                 <li><a href="/GMII/TentangKami.html">Tentang Kami</a></li>
                 <li><a href="/GMII/Warta.html">Warta Jemaat</a></li>
                 <li><a href="/GMII/Kegiatan.html">Kegiatan</a></li>
