--- a/public/GMII/Kegiatan.html
+++ b/public/GMII/Kegiatan.html
@@ -46,10 +46,10 @@
     <div class="program">
         <h3>Program GMII Akcaya Pontianak</h3>
         <div class="kontener2">
-            <a class="program-item" href="/Retret.html"><img src="assets/images/retret.jpg"> <h2>Retreat</h2></a>
-            <a class="program-item" href="/Komsel.html"><img src="assets/images/komsel.jpg"> <h2>Komsel</h2></a>
-            <a class="program-item" href="/Ibadah.html"><img src="assets/images/ibadahminggu.png"> <h2>Ibadah Minggu</h2></a>
-            <a class="program-item" href="/Kerjasama.html"><img src="assets/images/alatmusik.jpg"> <h2>Kerja Sama dengan BPPR</h2></a>
+            <a class="program-item" href="/GMII/Retret.html"><img src="assets/images/retret.jpg"> <h2>Retreat</h2></a>
+            <a class="program-item" href="/GMII/Komsel.html"><img src="assets/images/komsel.jpg"> <h2>Komsel</h2></a>
+            <a class="program-item" href="/GMII/Ibadah.html"><img src="assets/images/ibadahminggu.png"> <h2>Ibadah Minggu</h2></a>
+            <a class="program-item" href="/GMII/Kerjasama.html"><img src="assets/images/alatmusik.jpg"> <h2>Kerja Sama dengan BPPR</h2></a>
         </div>
     </div>
     <footer>
